basic details panel

--- a/client/src/Components/Pane/Pane.module.css
+++ b/client/src/Components/Pane/Pane.module.css
@@ -4,5 +4,6 @@
     border-style: double;
     border-width: 5px;
     height: inherit;
-    padding-bottom: 18px;
+    padding: 2px;
+    background-color: white;
   }
