--- a/client/src/Components/Home/CatalogPane/CatalogPane.module.css
+++ b/client/src/Components/Home/CatalogPane/CatalogPane.module.css
@@ -1,3 +1,11 @@
+.catalog-pane {
+    max-height: 700px;
+    overflow: scroll;
+}
+
 .category-subheader {
-    top: -10px !important;
+    border: 1px solid #c3c3c3;
+    border-width: 2px;
+    line-height: 30px !important;
+    background-color: darkred !important;
 }
