timeline basic editing

--- a/client/src/Components/Timeline/EraCard/EraCard.module.css
+++ b/client/src/Components/Timeline/EraCard/EraCard.module.css
@@ -7,8 +7,16 @@
     text-align: center;
 }
 
+.era-subheader {
+    margin-bottom: -10px;
+}
+
 .era-title {
     margin-bottom: -10px;
+}
+
+.entries-editable {
+    width: 450px !important;
 }
 
 .entry {
