--- a/client/src/index.css
+++ b/client/src/index.css
@@ -19,5 +19,8 @@ code {
 }
 
 #search-autocomplete input {
-    padding: 0px !important;
+    padding-top: 0px !important;
+    padding-bottom: 0px !important;
+    padding-right: 0px !important;
+    padding-left: 4px !important;
 }
