--- a/client/src/Components/Home/CurrentlySelectedPane/CurrentlySelectedPane.module.css
+++ b/client/src/Components/Home/CurrentlySelectedPane/CurrentlySelectedPane.module.css
@@ -1,7 +1,19 @@
 .content-container {
     padding: 10px;
     overflow: auto;
-    max-height: 640px;
+    max-height: 600px;
+}
+
+@media screen and (max-width: 1397px) {
+    .content-container {
+        max-height: 560px;
+    }
+}
+
+@media screen and (max-width: 1250px) {
+    .content-container {
+        max-height: 510px;
+    }
 }
 
 .title {
@@ -45,6 +57,6 @@
 }
 
 .button-container {
-    border-top: 1px solid #c3c3c3;
+    border-top: 2px solid #c3c3c3;
     padding-top: 5px;
 }
