--- a/client/src/Components/Home/CurrentlySelectedPane/CurrentlySelectedPane.module.css
+++ b/client/src/Components/Home/CurrentlySelectedPane/CurrentlySelectedPane.module.css
@@ -1,5 +1,19 @@
 .content-container {
     padding: 10px;
+    overflow: auto;
+    max-height: 600px;
+}
+
+@media screen and (max-width: 1397px) {
+    .content-container {
+        max-height: 560px;
+    }
+}
+
+@media screen and (max-width: 1250px) {
+    .content-container {
+        max-height: 510px;
+    }
 }
 
 .title {
@@ -7,8 +21,42 @@
     margin-bottom: 8px;
 }
 
+.content-details-container {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-around;
+}
+
+.content-details-misc-container {
+    display: inline-block;
+    width: 35%;
+    text-align: left;
+    font-size: 14px;
+}
+
+@media screen and (max-width: 1200px) {
+    .content-details-container {
+        display: block;
+        text-align: center;
+    }
+
+    .content-details-misc-container {
+        width: 100%;
+        text-align: center;
+    }
+}
+
+.content-details-misc-container p {
+    margin-top: 0px;
+    margin-bottom: 5px;
+}
+
 .pane {
     overflow: scroll;
     height: 700px;
-    /* max-height: 700px; TODO: make this global var */
+}
+
+.button-container {
+    border-top: 2px solid #c3c3c3;
+    padding-top: 5px;
 }
