--- a/client/src/Components/Home/CurrentlySelectedPane/CurrentlySelectedPane.module.css
+++ b/client/src/Components/Home/CurrentlySelectedPane/CurrentlySelectedPane.module.css
@@ -4,13 +4,13 @@
     max-height: 600px;
 }
 
-@media screen and (max-width: 1397px) {
+@media screen and (max-width: 1608px) {
     .content-container {
         max-height: 560px;
     }
 }
 
-@media screen and (max-width: 1250px) {
+@media screen and (max-width: 1157px) {
     .content-container {
         max-height: 510px;
     }
@@ -34,7 +34,7 @@
     font-size: 14px;
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1608) {
     .content-details-container {
         display: block;
         text-align: center;
